--- a/primera.ipynb
+++ b/primera.ipynb
@@ -2,19 +2,20 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 64,
+   "execution_count": 66,
    "id": "a3213f6f",
    "metadata": {},
    "outputs": [],
    "source": [
     "import pandas as ps\n",
     "import numpy as np\n",
-    "import random"
+    "import random\n",
+    "import math"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 65,
+   "execution_count": 67,
    "id": "2f8a6a66",
    "metadata": {},
    "outputs": [],
@@ -35,6 +36,10 @@
     "    η = 0.09  #  eta \n",
     "    prud = 0.045\n",
     "    u = 1.0   #  ypsilon \n",
+    "    \n",
+    "    \n",
+    "    iT_inv = 500\n",
+    "    T_inv = float(iT_inv)\n",
     "\n",
     "    # banks parameters\n",
     "    initial_loan = 120.0\n",
@@ -70,7 +75,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 53,
+   "execution_count": 68,
    "id": "050a14a6",
    "metadata": {},
    "outputs": [],
@@ -93,7 +98,11 @@
     "        self.probfail = Config.initial_probfail\n",
     "        self.haircut = Config.initial_haircut\n",
     "        self.new_deposit = self.Dloan  = 0.0\n",
-    "        self.interbankLoan = self.interbankDebt = self.failB = self.asset = self.leverage = 0.0\n",
+    "        self.interbankLoan = 0.0\n",
+    "        self.interbankDebt = 0.0\n",
+    "        self.failB = 0.0\n",
+    "        self.asset = 0.0\n",
+    "        self.leverage = 0.0\n",
     "        self.deltaD = self.firesale = self.crunch =  0.0\n",
     "        \n",
     "        self.asset = self.loan+ self.liquidity\n",
@@ -104,7 +113,7 @@
     "        self.connected = 0.0  # collegati\n",
     "        \n",
     "        self.marked = 0\n",
-    "        self.neightbour = 0   \n",
+    "        self.neighbour = 0   \n",
     "        \n",
     "        self.a = 0.0\n",
     "        self.b = 0.0\n",
@@ -115,13 +124,21 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 47,
+   "execution_count": 71,
    "id": "b8efeb9d",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "ename": "SyntaxError",
+     "evalue": "invalid syntax (3731300589.py, line 60)",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[1;36m  Cell \u001b[1;32mIn [71], line 60\u001b[1;36m\u001b[0m\n\u001b[1;33m    Status.banks[j].fit =\u001b[0m\n\u001b[1;37m                          ^\u001b[0m\n\u001b[1;31mSyntaxError\u001b[0m\u001b[1;31m:\u001b[0m invalid syntax\n"
+     ]
+    }
+   ],
    "source": [
     "def matrixRandom():\n",
-    "    int i, j;\n",
     "    for i in range(len(Status.banks)):\n",
     "        Status.banks[i].connected = 0.0\n",
     "        for j in range(len(Status.banks)):\n",
@@ -151,114 +168,63 @@
     "    if (Status.banks[i].marked == -1):\n",
     "        Status.banks[i].marked = Status.mark\n",
     "        for i in range(len(Status.banks)):\n",
-    "            if (Status.marketBank[n][i] == 1 || Status.marketBank[i][n] == 1) && Status.banks[i].marked == -1 :\n",
+    "            if (Status.marketBank[n][i] == 1 or Status.marketBank[i][n] == 1) and Status.banks[i].marked == -1 :\n",
     "                matrixRandom_dfs(i)\n",
     "\n",
     "def matrixPreferential():\n",
-    "    float beta[N], interestMin;\n",
-    "  int link[N];\n",
-    "  int k = 0;\n",
-    "  int switching = 0;\n",
-    "  float ref = 0.;\n",
-    "  float fact = 0.;\n",
-    "  float prob = 0.;\n",
-    "  float fitness = 0.;\n",
+    "    k = 0\n",
+    "    switching = 0\n",
+    "    ref = 0.0\n",
+    "    fact = 0.0\n",
+    "    prob = 0.0\n",
+    "    fitness = 0.0\n",
+    "    liquidityMax = -1000.0\n",
+    "    interestMin = 1000.0\n",
+    "    i_max = -1\n",
+    "    i_max2= -1\n",
+    "    for j in range(len(Status.banks)):\n",
+    "        if Status.banks[j].liquidity > liquidityMax:\n",
+    "            liquidityMax = Status.banks[j].liquidity\n",
+    "            i_max = j\n",
+    "        if Status.banks[j].rate < interestMin:\n",
+    "            interestMin = Status.banks[j].rate\n",
+    "            i_max2= j\n",
     "\n",
-    "  liquidityMax = -1000.;\n",
-    "  i_max = -1;\n",
-    "  for (j = 0; j < N; j++) {\n",
-    "    if (liquidity[j] > liquidityMax) {\n",
-    "      liquidityMax = liquidity[j];\n",
-    "      i_max = j;\n",
-    "    }\n",
-    "  }\n",
+    "    β = np.zeros( (Config.N) )\n",
+    "    for i in range(len(Status.banks)):\n",
+    "        Status.banks[i].fit = 0.0\n",
+    "        Status.banks[i].outgoingLink = 0\n",
+    "        Status.banks[i].incomigLink = 0\n",
+    "        Status.banks[i].link = 0\n",
+    "    for j in range(len(Status.banks)):\n",
+    "        Status.banks[j].fit = \\\n",
+    "            Config.u * Status.banks[j].liquidity / liquidityMax + (1-Config.u)* interestMin * Status.banks[j].rate \n",
+    "        # fprintf( out20 ) **\n",
     "\n",
-    "  /*equityMax = -1000.;\n",
-    "  i_max = -1;\n",
-    "  for(j = 0; j < N; j++){\n",
-    "    if(equity[j] > equityMax){\n",
-    "      equityMax =equity[j];\n",
-    "      i_max = j;\n",
-    "    }\n",
-    "  }*/\n",
-    "\n",
-    "  interestMin = 1000.;\n",
-    "  i_max2 = -1;\n",
-    "  for (j = 0; j < N; j++) {\n",
-    "    if (tasso[j] < interestMin) {\n",
-    "      interestMin = tasso[j];\n",
-    "      i_max2 = j;\n",
-    "    }\n",
-    "  }\n",
-    "\n",
-    "  for (i = 0; i < N; i++) {\n",
-    "    fit[i] = 0.;\n",
-    "    beta[i] = 0.;\n",
-    "    outgoinglink[i] = 0;\n",
-    "    incominglink[i] = 0;\n",
-    "    link[i] = 0;\n",
-    "  }\n",
-    "  for (j = 0; j < N; j++) {\n",
-    "    fit[j] = (double)(ypsilon * (liquidity[j] / liquidityMax) + (1. - ypsilon) * (interestMin / tasso[j]));\n",
-    "    //fit[j] = (double)(ypsilon*(equity[j]/equityMax)+(1.-ypsilon)*(interestMin/tasso[j]));\n",
-    "    fprintf(out20, \"%d  %f %d \\n\", t, fit[j], n_sim);\n",
-    "    fflush(out20);\n",
-    "  }\n",
-    "\n",
-    "  for (i = 0; i < N; i++) {\n",
-    "    for (j = 0; j < N; j++) {\n",
-    "      marketBank[i][j] = 0;\n",
-    "      marketBank[j][i] = 0;\n",
-    "    }\n",
-    "  }\n",
-    "  for (i = 0; i < N; i++) {\n",
-    "    beta[i] = /*(ran2(&idum)*T_inv)+5;*/ T_inv; ///temperatura (inverso) di i  CHECK!\n",
-    "  }\n",
-    "  for (i = 0; i < N; i++) {\n",
-    "    j = i;\n",
-    "    while (j == i) {\n",
-    "      j = ran2( & idum) * N;\n",
-    "    }\n",
-    "    k = vicino[i];\n",
-    "    prob = ran2( & idum);\n",
-    "    fitness = ((fit[j]) - fit[k]); ///aggiungere i costi di transazione???-trans_cost\n",
-    "    ref = beta[i] * fitness;\n",
-    "    fact = (float) 1. / (1. + exp(-ref));\n",
-    "\n",
-    "    if (prob < fact && i != j) { //fitness>0 // prob < fact\n",
-    "      switching++;\n",
-    "      marketBank[i][k] = 0;\n",
-    "      marketBank[i][j] = 1;\n",
-    "      vicino[i] = j;\n",
-    "\n",
-    "    } else {\n",
-    "      marketBank[i][j] = 0;\n",
-    "      marketBank[i][k] = 1;\n",
-    "      vicino[i] = k;\n",
-    "    }\n",
-    "  }\n",
-    "\n",
-    "  for (i = 0; i < N; i++) {\n",
-    "    connected[i] = 1;\n",
-    "  }\n",
-    "\n",
-    "  double cazzo, i_maxperc, i_max2perc, nerd, nerd1;\n",
-    "\n",
-    "  i_maxperc = 0.;\n",
-    "  i_max2perc = 0.;\n",
-    "  cazzo = 0.;\n",
-    "  cazzo = N;\n",
-    "  nerd = i_max;\n",
-    "  nerd1 = i_max2;\n",
-    "  i_maxperc = (nerd / cazzo);\n",
-    "  i_max2perc = (nerd1 / cazzo);\n",
-    "\n",
-    "  fprintf(out13, \"%d %lf %d\\n\", t, i_maxperc, n_sim);\n",
-    "  fflush(out13);\n",
-    "\n",
-    "  fprintf(out3, \"%d  %lf %d \\n\", t, i_max2perc, n_sim);\n",
-    "  fflush(out3);\n",
-    "\n",
+    "    Status.marketBank = np.zeros( (Config.N,Config.N), int )\n",
+    "    for i in range(len(Status.banks)):\n",
+    "        β[i] = Config.T_inv\n",
+    "    for i in range(len(Status.banks)):\n",
+    "        j=i\n",
+    "        while j==i:\n",
+    "            j=int(random.random()*Config.N)\n",
+    "        k = System.banks[i].neighbour\n",
+    "        prob = random.random()\n",
+    "        fitness = System.banks[j].fit - System.banks[k].fit \n",
+    "        ref = β[i] * fitness\n",
+    "        fact = 1.0 / (1.0 + math.exp(-ref))\n",
+    "        if (prob<fact) and (i!=j):\n",
+    "            switching += 1\n",
+    "            Status.marketBank[i][k] = 0\n",
+    "            Status.marketBank[i][j] = 1\n",
+    "            Status.banks[i].neighbour = j\n",
+    "        else:\n",
+    "            Status.marketBank[i][j] = 0\n",
+    "            Status.marketBank[i][k] = 1\n",
+    "            Status.banks[i].neighbour = k\n",
+    "    for i in range(len(Status.banks)):\n",
+    "        Status.banks[i].connected = 1\n",
+    "    \n",
     "    \n",
     "    \n",
     "def findMaxEquity():\n",
