error en el codigo

--- a/003.fluctuations.green/fluctuations.green.ipynb
+++ b/003.fluctuations.green/fluctuations.green.ipynb
@@ -3,7 +3,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "236ff1ed",
+   "id": "7a5a7744",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -52,7 +52,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "1590f8cb",
+   "id": "c7f150c4",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -311,7 +311,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "e21816c3",
+   "id": "7e2f9145",
    "metadata": {
     "lines_to_next_cell": 0
    },
@@ -339,7 +339,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "8211df8a",
+   "id": "e19c756a",
    "metadata": {
     "lines_to_next_cell": 2
    },
@@ -349,7 +349,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "ee5a5bf8",
+   "id": "b11dbee1",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -458,7 +458,7 @@
     "    yy = []\n",
     "    for i in range(Config.T):\n",
     "        xx.append(i)\n",
-    "        yy.append( math.log( Status.firmsY[i]) )\n",
+    "        yy.append( math.log( Statistics.firmsY[i]) )\n",
     "    plt.plot(xx, yy, 'b-')\n",
     "    plt.ylabel(\"ln Y\")\n",
     "    plt.xlabel(\"t\")\n",
