--- a/003.fluctuations.green/fluctuations.green1.ipynb
+++ b/003.fluctuations.green/fluctuations.green1.ipynb
@@ -95,7 +95,7 @@
     "        Statistics.firmsB.append( BankSector.B )\n",
     "        Statistics.rate.append( BankSector.getAverageRate() )\n",
     "\n",
-    "        if args.saveall:\n",
+    "        if not isNotebook() and args.saveall:\n",
     "            bank = {}\n",
     "            bank['L'] = BankSector.L\n",
     "            bank['D'] = BankSector.D\n",
