probado con jose luis

--- a/003.fluctuations.green/fluctuations.green.ipynb
+++ b/003.fluctuations.green/fluctuations.green.ipynb
@@ -3,7 +3,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "3a2abb76",
+   "id": "be752392",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -17,8 +17,8 @@
     "\n",
     "\n",
     "class Config:\n",
-    "    T = 200  # time (1000)\n",
-    "    N = 1000  # number of firms (10000)\n",
+    "    T = 1000  # time (1000)\n",
+    "    N = 10000  # number of firms (10000)\n",
     "    Ñ = 180  # size parameter\n",
     "\n",
     "    c = 1  # parameter bankruptcy cost equation\n",
@@ -42,12 +42,14 @@
     "    delta1 = 0.001\n",
     "    delta2 = 0.002\n",
     "\n",
-    "    sigma = 1  # 0.02-0.05\n",
-    "    beta = 1  # bernoulli\n",
+    "    sigma = 0.05 # 0.02-0.05\n",
+    "    beta = 2  # bernoulli\n",
     "\n",
-    "    coef_zeta = 0.01\n",
+    "    coef_zeta = 0.006\n",
     "\n",
-    "    thresold_green = 0.5\n",
+    "    thresold_green = 0.15\n",
+    "\n",
+    "    initial_t_graphs = 0\n",
     "\n",
     "\n",
     "# +\n",
@@ -131,13 +133,6 @@
     "        return Status.firmIdMax\n",
     "\n",
     "    @staticmethod\n",
-    "    def getAverageφ():\n",
-    "        phi = 0\n",
-    "        for i in Status.firms:\n",
-    "            phi += i.φ\n",
-    "        return phi / len(Status.firms)\n",
-    "\n",
-    "    @staticmethod\n",
     "    def initialize():\n",
     "        for i in range(Config.N):\n",
     "            Status.firms.append(Firm())\n",
@@ -161,8 +156,6 @@
     "\n",
     "    def __init__(self):\n",
     "        self.id = Status.getNewFirmId()\n",
-    "        # if Status.t>0:\n",
-    "        #    self.φ = Status.getAverageφ()\n",
     "\n",
     "    def determineCredit(self):\n",
     "        # (equation 11)\n",
@@ -328,7 +321,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "e83447bc",
+   "id": "de660939",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -383,7 +376,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "aae94e70",
+   "id": "579de1eb",
    "metadata": {
     "lines_to_next_cell": 2
    },
@@ -438,8 +431,7 @@
     "    plt.clf()\n",
     "    xx1 = []\n",
     "    yy = []\n",
-    "    rangemin = 150 if Config.T > 150 else 0\n",
-    "    for i in range(rangemin, Config.T):\n",
+    "    for i in range(Config.initial_t_graphs, Config.T):\n",
     "        yy.append(i)\n",
     "        xx1.append(math.log(Status.firmsKsums[i]))\n",
     "    plt.plot(yy, xx1, 'b-')\n",
@@ -454,7 +446,7 @@
     "    plt.clf()\n",
     "    xx = []\n",
     "    yy = []\n",
-    "    for i in range(Config.T):\n",
+    "    for i in range(Config.initial_t_graphs, Config.T):\n",
     "        xx.append(i)\n",
     "        yy.append(Statistics.firmsπ[i] / Statistics.firmsNum[i])\n",
     "    plt.plot(xx, yy, 'b-')\n",
@@ -469,7 +461,7 @@
     "    plt.clf()\n",
     "    xx = []\n",
     "    yy = []\n",
-    "    for i in range(Config.T):\n",
+    "    for i in range(Config.initial_t_graphs, Config.T):\n",
     "        xx.append(i)\n",
     "        yy.append(Statistics.bankrupcy[i])\n",
     "    plt.plot(xx, yy, 'b-')\n",
@@ -484,8 +476,7 @@
     "    plt.clf()\n",
     "    xx = []\n",
     "    yy = []\n",
-    "    rangemin = 150 if Config.T > 150 else 0\n",
-    "    for i in range(rangemin, Config.T):\n",
+    "    for i in range(Config.initial_t_graphs, Config.T):\n",
     "        xx.append(i)\n",
     "        yy.append(-Statistics.firmsB[i] / Statistics.firmsNum[i])\n",
     "    plt.plot(xx, yy, 'b-')\n",
@@ -500,7 +491,7 @@
     "    plt.clf()\n",
     "    xx = []\n",
     "    yy = []\n",
-    "    for i in range(Config.T):\n",
+    "    for i in range(Config.initial_t_graphs, Config.T):\n",
     "        xx.append(i)\n",
     "        yy.append(math.log(Statistics.firmsY[i]))\n",
     "    plt.plot(xx, yy, 'b-')\n",
@@ -515,7 +506,7 @@
     "    plt.clf()\n",
     "    xx = []\n",
     "    yy = []\n",
-    "    for i in range(Config.T):\n",
+    "    for i in range(Config.initial_t_graphs, Config.T):\n",
     "        xx.append(i)\n",
     "        yy.append(math.log(Statistics.firmsK[i]))\n",
     "    plt.plot(xx, yy, 'b-')\n",
@@ -530,7 +521,7 @@
     "    plt.clf()\n",
     "    xx = []\n",
     "    yy = []\n",
-    "    for i in range(Config.T):\n",
+    "    for i in range(Config.initial_t_graphs, Config.T):\n",
     "        xx.append(i)\n",
     "        yy.append(Statistics.firmsφ[i] / Statistics.firmsNum[i])\n",
     "    plt.plot(xx, yy, 'b-')\n",
@@ -543,16 +534,13 @@
     "def graph_zeta(show=True):\n",
     "    Statistics.log(\"zeta\")\n",
     "    plt.clf()\n",
-    "    xx = []\n",
-    "    yy = []\n",
-    "    for i in range(Config.T):\n",
-    "        xx.append(i)\n",
-    "        yy.append(Statistics.firmsz[i] / Statistics.firmsNum[i])\n",
-    "    plt.plot(xx, yy, 'b-')\n",
-    "    plt.ylabel(\"Zeta\")\n",
-    "    plt.xlabel(\"t\")\n",
-    "    plt.title(\"Zeta\")\n",
-    "    plt.show() if show else plt.savefig(OUTPUT_DIRECTORY + \"/zeta.svg\")\n",
+    "    for i in range(len(Statistics.firmsz)):\n",
+    "        plt.plot([i] * len(Statistics.firmsz[i]), Statistics.firmsz[i], 'b.', alpha=0.3)\n",
+    "    plt.title(\"Zeta Values for All Firms over Time\")\n",
+    "    plt.xlabel(\"Time\")\n",
+    "    plt.ylabel(\"Zeta Value\")\n",
+    "    plt.show() if show else plt.savefig(OUTPUT_DIRECTORY +\"/zeta.svg\")\n",
+    "\n",
     "\n",
     "\n",
     "def graph_mu(show=True):\n",
@@ -560,7 +548,7 @@
     "    plt.clf()\n",
     "    xx = []\n",
     "    yy = []\n",
-    "    for i in range(Config.T):\n",
+    "    for i in range(Config.initial_t_graphs, Config.T):\n",
     "        xx.append(i)\n",
     "        yy.append(Statistics.firmsmu[i] / Statistics.firmsNum[i])\n",
     "    plt.plot(xx, yy, 'b-')\n",
@@ -575,7 +563,7 @@
     "    plt.clf()\n",
     "    xx = []\n",
     "    yy = []\n",
-    "    for i in range(Config.T):\n",
+    "    for i in range(Config.initial_t_graphs, Config.T):\n",
     "        xx.append(i)\n",
     "        yy.append(Statistics.newFirms[i])\n",
     "    plt.plot(xx, yy, 'b-')\n",
@@ -613,8 +601,7 @@
     "    plt.clf()\n",
     "    xx2 = []\n",
     "    yy = []\n",
-    "    rangemin = 150 if Config.T > 150 else 0\n",
-    "    for i in range(rangemin, Config.T):\n",
+    "    for i in range(Config.initial_t_graphs, Config.T):\n",
     "        yy.append(i)\n",
     "        xx2.append(Statistics.rate[i])\n",
     "    plt.plot(yy, xx2, 'b-')\n",
@@ -629,8 +616,7 @@
     "    plt.clf()\n",
     "    xx2 = []\n",
     "    yy = []\n",
-    "    rangemin = 150 if Config.T > 150 else 0\n",
-    "    for i in range(rangemin, Config.T):\n",
+    "    for i in range(Config.initial_t_graphs, Config.T):\n",
     "        if Status.firmsGrowRate[i] != 0:\n",
     "            yy.append(i)\n",
     "            xx2.append(Status.firmsGrowRate[i])\n",
@@ -641,28 +627,12 @@
     "    plt.show() if show else plt.savefig(OUTPUT_DIRECTORY + \"/growth_rates.svg\")\n",
     "\n",
     "\n",
-    "def graph_newentry(show=True):\n",
-    "    Statistics.log(\"newentry\")\n",
-    "    plt.clf()\n",
-    "    xx = []\n",
-    "    yy = []\n",
-    "    for i in range(Config.T):\n",
-    "        xx.append(i)\n",
-    "        yy.append(Statistics.newFirms[i])\n",
-    "        # addFirms(yy[-1])\n",
-    "    plt.plot(xx, yy, 'b-')\n",
-    "    plt.ylabel(\"New Entries\")\n",
-    "    plt.xlabel(\"t\")\n",
-    "    plt.title(\"New Entries\")\n",
-    "    plt.show() if show else plt.savefig(OUTPUT_DIRECTORY + \"/newentry.svg\")\n",
-    "\n",
-    "\n",
     "def graph_bankrupcies(show=True):\n",
     "    Statistics.log(\"bankrupcies\")\n",
     "    plt.clf()\n",
     "    xx = []\n",
     "    yy = []\n",
-    "    for i in range(0, Config.T):\n",
+    "    for i in range(Config.initial_t_graphs, Config.T):\n",
     "        xx.append(i)\n",
     "        yy.append(Statistics.bankrupcy[i])\n",
     "    plt.plot(xx, yy, 'b-')\n",
@@ -693,7 +663,6 @@
     "    graph_interest_rate(show)\n",
     "    graph_φ(show)\n",
     "    graph_k(show)\n",
-    "    graph_newentry(show)\n",
     "    graph_bankrupcies(show)\n",
     "    graph_growth_rate(show)"
    ]
@@ -701,7 +670,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "c6bdbf11",
+   "id": "0f1e02e9",
    "metadata": {
     "lines_to_next_cell": 2
    },
@@ -720,7 +689,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "a7445e7d",
+   "id": "f50d7220",
    "metadata": {},
    "outputs": [],
    "source": [
