--- a/002.fluctuations/fluctuations.ipynb
+++ b/002.fluctuations/fluctuations.ipynb
@@ -3,7 +3,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "c2eb2f43",
+   "id": "b2844d0a",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -36,7 +36,7 @@
     "    ω = 0.002  # markdown interest rate (the higher it is, the monopolistic power of banks)\n",
     "    λ = 0.3  # credit assets rate\n",
     "    d = 100  # location cost\n",
-    "    e = 0.1  # sensivity\n",
+    "    e = 0.1  # sensitivity\n",
     "\n",
     "    # firms initial parameters\n",
     "    K_i0 = 100  # capital\n",
@@ -52,7 +52,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "07a66b6a",
+   "id": "645937b5",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -75,7 +75,7 @@
     "    firms = []\n",
     "    bankSector = []\n",
     "\n",
-    "    bankrupcy = []\n",
+    "    bankruptcy = []\n",
     "    firmsK = []\n",
     "    firmsπ = []\n",
     "    firmsL = []\n",
@@ -85,12 +85,12 @@
     "\n",
     "    @staticmethod\n",
     "    def getStatistics():\n",
-    "        Statistics.log(\"t=%4s [firms] n=%s,sumA=%.2f,sumL=%.2f,sumK=%.2f,sumπ=%2.f\" % (Status.t, len(Status.firms), \\\n",
+    "        Statistics.log(\"t=%4s [firms] n=%s,sumA=%.2f,sumL=%.2f,sumK=%.2f,sumπ=%2.f\" % (Status.t, len(Status.firms),\n",
     "                                                                                       Status.firmsAsum,\n",
     "                                                                                       Status.firmsLsum,\n",
     "                                                                                       Status.firmsKsum,\n",
     "                                                                                       Status.firmsπsum))\n",
-    "        Statistics.log(\"       [bank]  avgRate=%.2f,D=%.2f,L=%.2f,E=%0.2f,B=%.2f,π=%.2f\" % (BankSector.getAverageRate(), \\\n",
+    "        Statistics.log(\"       [bank]  avgRate=%.2f,D=%.2f,L=%.2f,E=%0.2f,B=%.2f,π=%.2f\" % (BankSector.getAverageRate(),\n",
     "                                                                                            BankSector.D, BankSector.L,\n",
     "                                                                                            BankSector.E,\n",
     "                                                                                            BankSector.B, BankSector.π))\n",
@@ -147,7 +147,7 @@
     "\n",
     "    def determineInterestRate(self):\n",
     "        # (equation 12)\n",
-    "        return (2 + self.A) / (2 * Config.c * Config.g * (1 / (Config.c * Config.φ) + self.π + self.A) + \\\n",
+    "        return (2 + self.A) / (2 * Config.c * Config.g * (1 / (Config.c * Config.φ) + self.π + self.A) +\n",
     "                               2 * Config.c * Config.g * BankSector.L * (\n",
     "                                           Config.λ * self.__ratioK() + (1 - Config.λ) * self.__ratioA()))\n",
     "\n",
@@ -159,9 +159,6 @@
     "\n",
     "    def determineCapital(self):\n",
     "        # equation 9\n",
-    "        ## este es el negativo\n",
-    "        # Statistics.log( \"(%s -%s * %s ) / (%s * %s  * %s * %s)   + %s / (2 * %s * %s)\" %\n",
-    "        #                  (Config.φ ,Config.g, self.r, Config.c, Config.φ, Config.g,  self.r, self.A , Config.g , self.r))\n",
     "        return (Config.φ - Config.g * self.r) / (Config.c * Config.φ * Config.g * self.r) + (\n",
     "                    self.A / (2 * Config.g * self.r))\n",
     "\n",
@@ -227,7 +224,7 @@
     "            Status.numFailuresGlobal += 1\n",
     "            i += 1\n",
     "    Statistics.log(\"        - removed %d firms %s\" % (i, \"\" if i == 0 else \" (next step B=%s)\" % BankSector.B))\n",
-    "    Statistics.bankrupcy.append(i)\n",
+    "    Statistics.bankruptcy.append(i)\n",
     "    return i\n",
     "\n",
     "\n",
@@ -294,7 +291,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "d7676864",
+   "id": "d0207826",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -317,7 +314,7 @@
     "            set_trace()\n",
     "\n",
     "\n",
-    "def graph_zipf_density(show=True):\n",
+    "def plot_zipf_density(show=True):\n",
     "    Statistics.log(\"zipf_density\")\n",
     "    plt.clf()\n",
     "    zipf = {}  # log K = freq\n",
@@ -343,11 +340,11 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "d82ef7fc",
+   "id": "c25c9c1e",
    "metadata": {},
    "outputs": [],
    "source": [
-    "def graph_zipf_density1(show=True):\n",
+    "def plot_zipf_density1(show=True):\n",
     "    Statistics.log(\"zipf_density\")\n",
     "    plt.clf()\n",
     "    zipf = {}  # log K = freq\n",
@@ -371,7 +368,7 @@
     "    plt.show() if show else plt.savefig(OUTPUT_DIRECTORY + \"/zipf_density1.svg\")\n",
     "\n",
     "\n",
-    "def graph_zipf_rank(show=True):\n",
+    "def plot_zipf_rank(show=True):\n",
     "    Statistics.log(\"zipf_rank\")\n",
     "    plt.clf()\n",
     "    y = []  # log K = freq\n",
@@ -390,7 +387,7 @@
     "    plt.show() if show else plt.savefig(OUTPUT_DIRECTORY + \"/zipf_rank.svg\")\n",
     "\n",
     "\n",
-    "def graph_aggregate_output(show=True):\n",
+    "def plot_aggregate_output(show=True):\n",
     "    Statistics.log(\"aggregate_output\")\n",
     "    plt.clf()\n",
     "    xx1 = []\n",
@@ -405,7 +402,7 @@
     "    plt.show() if show else plt.savefig(OUTPUT_DIRECTORY + \"/aggregate_output.svg\")\n",
     "\n",
     "\n",
-    "def graph_profits(show=True):\n",
+    "def plot_profits(show=True):\n",
     "    Statistics.log(\"profits\")\n",
     "    plt.clf()\n",
     "    xx = []\n",
@@ -420,7 +417,7 @@
     "    plt.show() if show else plt.savefig(OUTPUT_DIRECTORY + \"/profits.svg\")\n",
     "\n",
     "\n",
-    "def graph_baddebt(show=True):\n",
+    "def plot_baddebt(show=True):\n",
     "    Statistics.log(\"bad_debt\")\n",
     "    plt.clf()\n",
     "    xx = []\n",
@@ -435,14 +432,14 @@
     "    plt.show() if show else plt.savefig(OUTPUT_DIRECTORY + \"/bad_debt_avg.svg\")\n",
     "\n",
     "\n",
-    "def graph_bankrupcies(show=True):\n",
+    "def plot_bankrupcies(show=True):\n",
     "    Statistics.log(\"bankrupcies\")\n",
     "    plt.clf()\n",
     "    xx = []\n",
     "    yy = []\n",
     "    for i in range(150, Config.T):\n",
     "        xx.append(i)\n",
-    "        yy.append(Statistics.bankrupcy[i])\n",
+    "        yy.append(Statistics.bankruptcy[i])\n",
     "    plt.plot(xx, yy, 'b-')\n",
     "    plt.ylabel(\"num of bankrupcies\")\n",
     "    plt.xlabel(\"t\")\n",
@@ -450,7 +447,7 @@
     "    plt.show() if show else plt.savefig(OUTPUT_DIRECTORY + \"/bankrupted.svg\")\n",
     "\n",
     "\n",
-    "def graph_bad_debt(show=True):\n",
+    "def plot_bad_debt(show=True):\n",
     "    Statistics.log(\"bad_debt\")\n",
     "    plt.clf()\n",
     "    xx = []\n",
@@ -466,7 +463,7 @@
     "    plt.show() if show else plt.savefig(OUTPUT_DIRECTORY + \"/bad_debt.svg\")\n",
     "\n",
     "\n",
-    "def graph_interest_rate(show):\n",
+    "def plot_interest_rate(show):\n",
     "    Statistics.log(\"interest_rate\")\n",
     "    plt.clf()\n",
     "    xx2 = []\n",
@@ -481,7 +478,7 @@
     "    plt.show() if show else plt.savefig(OUTPUT_DIRECTORY + \"/interest_rate.svg\")\n",
     "\n",
     "\n",
-    "def graph_growth_rate(show):\n",
+    "def plot_growth_rate(show):\n",
     "    Statistics.log(\"growth_rate\")\n",
     "    plt.clf()\n",
     "    xx2 = []\n",
@@ -497,7 +494,7 @@
     "    plt.show() if show else plt.savefig(OUTPUT_DIRECTORY + \"/growth_rates.svg\")\n",
     "\n",
     "\n",
-    "def graph_qq_firms_k(show):\n",
+    "def plot_qq_firms_k(show):\n",
     "    plt.clf()\n",
     "    fig, ax = plt.subplots(nrows=1, ncols=1, figsize=(6, 4))\n",
     "    sm.qqplot(\n",
@@ -521,7 +518,7 @@
     "    plt.show() if show else plt.savefig(OUTPUT_DIRECTORY + \"/qq_firmsk.svg\")\n",
     "\n",
     "\n",
-    "def graph_qq(show):\n",
+    "def plot_qq(show):\n",
     "    plt.clf()\n",
     "    fig, axs = plt.subplots(nrows=1, ncols=2, figsize=(10, 4))\n",
     "    sm.qqplot(\n",
@@ -535,7 +532,7 @@
     "    axs[0].set_title('Chart Q-Q firmsK', fontsize=10, fontweight=\"bold\")\n",
     "    axs[0].tick_params(labelsize=7)\n",
     "    sm.qqplot(\n",
-    "        pd.DataFrame(Statistics.bankrupcy, columns=['Bankrupcies']),\n",
+    "        pd.DataFrame(Statistics.bankruptcy, columns=['Bankrupcies']),\n",
     "        fit=True,\n",
     "        line='q',\n",
     "        alpha=0.4,\n",
@@ -547,7 +544,7 @@
     "    plt.show() if show else plt.savefig(OUTPUT_DIRECTORY + \"/qq.svg\")\n",
     "\n",
     "\n",
-    "def graph_distribution_kl(show):\n",
+    "def plot_distribution_kl(show):\n",
     "    plt.clf()\n",
     "    fig, axs = plt.subplots(nrows=1, ncols=2, figsize=(10, 4))\n",
     "\n",
@@ -567,26 +564,26 @@
     "    plt.show() if show else plt.savefig(OUTPUT_DIRECTORY + \"/distribution.svg\")\n",
     "\n",
     "\n",
-    "def show_graph(show):\n",
-    "    graph_aggregate_output(show)\n",
-    "    graph_growth_rate(show)\n",
-    "    graph_zipf_rank(show)\n",
-    "    graph_zipf_density(show)\n",
-    "    graph_zipf_density1(show)\n",
-    "    graph_profits(show)\n",
-    "    graph_bad_debt(show)\n",
-    "    graph_baddebt(show)\n",
-    "    graph_bankrupcies(show)\n",
-    "    graph_interest_rate(show)\n",
-    "    graph_qq_firms_k(show)\n",
-    "    graph_qq(show)\n",
-    "    graph_distribution_kl(show)"
+    "def show_figures(show):\n",
+    "    plot_aggregate_output(show)\n",
+    "    plot_growth_rate(show)\n",
+    "    plot_zipf_rank(show)\n",
+    "    plot_zipf_density(show)\n",
+    "    plot_zipf_density1(show)\n",
+    "    plot_profits(show)\n",
+    "    plot_bad_debt(show)\n",
+    "    plot_baddebt(show)\n",
+    "    plot_bankrupcies(show)\n",
+    "    plot_interest_rate(show)\n",
+    "    plot_qq_firms_k(show)\n",
+    "    plot_qq(show)\n",
+    "    plot_distribution_kl(show)"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "0115eafe",
+   "id": "e8176244",
    "metadata": {
     "lines_to_next_cell": 2
    },
@@ -595,11 +592,11 @@
     "\n",
     "def doInteractive():\n",
     "    parser = argparse.ArgumentParser(description=\"Fluctuations firms/banks\")\n",
-    "    parser.add_argument(\"--graph\", action=\"store_true\", help=\"Shows the graph\")\n",
+    "    parser.add_argument(\"--plot\", action=\"store_true\", help=\"Shows the plots\")\n",
     "    parser.add_argument(\"--sizeparam\", type=int, help=\"Size parameter (default=%s)\" % Config.Ñ)\n",
-    "    parser.add_argument(\"--savegraph\", action=\"store_true\", help=\"Save the graphs in \" + OUTPUT_DIRECTORY)\n",
+    "    parser.add_argument(\"--saveplot\", action=\"store_true\", help=\"Save the plots in dir '\" + OUTPUT_DIRECTORY+\"'\")\n",
     "    parser.add_argument(\"--log\", action=\"store_true\", help=\"Log (stdout default)\")\n",
-    "    parser.add_argument(\"--logfile\", type=str, help=\"Log to file in \" + OUTPUT_DIRECTORY)\n",
+    "    parser.add_argument(\"--logfile\", type=str, help=\"Log to file in directory '\" + OUTPUT_DIRECTORY+\"'\")\n",
     "    parser.add_argument(\"--debug\", help=\"Do a debug session at t=X, default each t\", type=int, const=-1, nargs='?')\n",
     "    args = parser.parse_args()\n",
     "\n",
@@ -616,10 +613,10 @@
     "        Statistics.log(\"[total failures in all times = %s \" % Status.numFailuresGlobal)\n",
     "    else:\n",
     "        Statistics.log(\"[no failures]\")\n",
-    "    if args.graph:\n",
-    "        show_graph(True)\n",
-    "    if args.savegraph:\n",
-    "        show_graph(False)\n",
+    "    if args.plot:\n",
+    "        show_figures(True)\n",
+    "    if args.saveplot:\n",
+    "        show_figures(False)\n",
     "\n",
     "\n",
     "def is_notebook():\n",
@@ -633,7 +630,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "2e279de3",
+   "id": "08a164fe",
    "metadata": {
     "lines_to_next_cell": 2
    },
@@ -643,7 +640,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "742dd676",
+   "id": "6bc14ed0",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -655,7 +652,7 @@
     "        doInteractive()\n",
     "    else:\n",
     "        doSimulation()\n",
-    "        show_graph(True)"
+    "        show_figures(True)"
    ]
   }
  ],
