--- a/003.fluctuations.green/fluctuations.green.ipynb
+++ b/003.fluctuations.green/fluctuations.green.ipynb
@@ -3,7 +3,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "97c8e8ef",
+   "id": "11315bbf",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -18,6 +18,7 @@
     "import numpy as np\n",
     "from scipy import stats\n",
     "import matplotlib.pyplot as plt\n",
+    "from decimal import Decimal\n",
     "\n",
     "random.seed(40579)\n",
     "\n",
@@ -30,39 +31,37 @@
     "    Ñ = 180  # size parameter\n",
     "\n",
     "    c = 1  # parameter bankruptcy cost equation\n",
-    "    α = 0.08  # alpha, ratio equity-loan\n",
-    "    g = 1.1  # variable cost\n",
-    "    ω = 0.002  # markdown interest rate (the higher it is, the monopolistic power of banks)\n",
-    "    λ = 0.3  # credit assets rate\n",
+    "    α = Decimal(\"0.08\")  # alpha, ratio equity-loan\n",
+    "    g = Decimal(\"1.1\")  # variable cost\n",
+    "    ω = Decimal(\"0.002\")  # markdown interest rate (the higher it is, the monopolistic power of banks)\n",
+    "    λ = Decimal(\"0.3\")  # credit assets rate\n",
     "    d = 100  # location cost\n",
-    "    e = 0.1  # sensitivity\n",
+    "    e = Decimal(\"0.1\")  # sensitivity\n",
     "\n",
     "    # firms initial parameters\n",
-    "    K_i0 = 100  # capital\n",
-    "    A_i0 = 20  # asset\n",
-    "    L_i0 = 80  # liability\n",
-    "    π_i0 = 0  # profit\n",
-    "    B_i0 = 0  # bad debt\n",
-    "\n",
+    "    K_i0 = Decimal(\"100\")  # capital\n",
+    "    A_i0 = Decimal(\"20\")  # asset\n",
+    "    L_i0 = Decimal(\"80\")  # liability\n",
+    "    π_i0 = Decimal(\"0\")  # profit\n",
+    "    B_i0 = Decimal(\"0\")  # bad debt\n",
+    "    φ_i0 = Decimal(\"0.1\") # initial phi\n",
     "    # risk coefficient for bank sector (Basel)\n",
-    "    v = 0.2\n",
+    "    v = Decimal(\"0.2\")\n",
     "\n",
-    "    delta1 = 0.001\n",
-    "    delta2 = 0.002\n",
+    "    delta1 = Decimal(\"0.001\")\n",
+    "    delta2 = Decimal(\"0.002\")\n",
     "\n",
-    "    coef_zeta = 0.04\n",
+    "    coef_zeta = Decimal(\"0.04\")\n",
     "    add_new_firms = True\n",
     "\n",
-    "    sigma = 0.02  # 0.02-0.05\n",
-    "    beta = 2  # bernoulli\n",
-    "\n",
-    "    thresold_green = 0.15"
+    "    sigma = Decimal(\"0.01\")  # 0.02-0.05\n",
+    "    beta = 2  # bernoulli"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "d8bae9ba",
+   "id": "24859413",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -91,6 +90,7 @@
     "    firmsL = []\n",
     "    firmsB = []\n",
     "    firmsNum = []\n",
+    "    newFirms = []\n",
     "    rate = []\n",
     "    firmsz = []\n",
     "    firmsmu = []\n",
@@ -127,12 +127,12 @@
     "\n",
     "class Status:\n",
     "    firms = []\n",
-    "    firmsKsum = 0.0\n",
-    "    firmsAsum = 0.0\n",
-    "    firmsLsum = 0.0\n",
-    "    firmsπsum = 0.0\n",
-    "    firmsAsum = 0.0\n",
-    "    firmsφsum = 0.0\n",
+    "    firmsKsum = Decimal(\"0.0\")\n",
+    "    firmsAsum = Decimal(\"0.0\")\n",
+    "    firmsLsum = Decimal(\"0.0\")\n",
+    "    firmsπsum = Decimal(\"0.0\")\n",
+    "    firmsAsum = Decimal(\"0.0\")\n",
+    "    firmsφsum = Decimal(\"0.0\")\n",
     "\n",
     "    numFailuresGlobal = 0\n",
     "    t = 0\n",
@@ -156,16 +156,15 @@
     "class Firm():\n",
     "    K = Config.K_i0  # capital\n",
     "    A = Config.A_i0  # asset\n",
-    "    r = 0.0  # rate money is given by banksector\n",
+    "    r = Decimal(\"0.0\")  # rate money is given by banksector\n",
     "    L = Config.L_i0  # credit\n",
-    "    π = 0.0  # profit\n",
-    "    u = 0.0\n",
+    "    π = Decimal(\"0.0\")  # profit\n",
+    "    u = Decimal(\"0.0\")\n",
     "\n",
-    "    φ = 0.1  # initial capital productivity\n",
-    "    mu = 0.0\n",
-    "    zeta = 0.0\n",
-    "    green = False\n",
-    "    innovation = 0.0\n",
+    "    φ = Config.φ_i0  # initial capital productivity\n",
+    "    mu = Decimal(\"0.0\")\n",
+    "    zeta = Decimal(\"0.0\")\n",
+    "    innovation = Decimal(\"0.0\")\n",
     "\n",
     "    def __init__(self):\n",
     "        self.id = Status.getNewFirmId()\n",
@@ -195,7 +194,7 @@
     "                self.A / (2 * Config.g * self.r))\n",
     "\n",
     "    def determineU(self):\n",
-    "        return random.random() * 2\n",
+    "        return Decimal(str(random.random())) * 2\n",
     "\n",
     "    def determineAssets(self):\n",
     "        # equation 6\n",
@@ -225,8 +224,8 @@
     "class BankSector():\n",
     "    E = Config.N * Config.L_i0 * Config.v\n",
     "    B = Config.B_i0  # bad debt\n",
-    "    D = 0\n",
-    "    π = 0\n",
+    "    D = Decimal(\"0\")\n",
+    "    π = Decimal(\"0\")\n",
     "\n",
     "    @staticmethod\n",
     "    def determineDeposits():\n",
@@ -236,7 +235,7 @@
     "    @staticmethod\n",
     "    def determineProfit():\n",
     "        # equation 13\n",
-    "        profitDeposits = 0.0\n",
+    "        profitDeposits = Decimal(\"0.0\")\n",
     "        for firm in Status.firms:\n",
     "            profitDeposits += firm.r * firm.L\n",
     "        BankSector.D = BankSector.determineDeposits()\n",
@@ -244,7 +243,7 @@
     "\n",
     "    @staticmethod\n",
     "    def getAverageRate():\n",
-    "        average = 0.0\n",
+    "        average = Decimal(\"0.0\")\n",
     "        for firm in Status.firms:\n",
     "            average += firm.r\n",
     "        return average / len(Status.firms)\n",
@@ -259,7 +258,7 @@
     "\n",
     "def removeBankruptedFirms():\n",
     "    i = 0\n",
-    "    BankSector.B = 0.0\n",
+    "    BankSector.B = Decimal(\"0.0\")\n",
     "    for firm in Status.firms[:]:\n",
     "        if (firm.π + firm.A) < 0:\n",
     "            ##Statistics.log(\"quiebra %d %s %s\" % (firm.id,firm.π,firm.A))\n",
@@ -281,11 +280,11 @@
     "\n",
     "\n",
     "def updateFirmsStatus():\n",
-    "    Status.firmsAsum = 0.0\n",
-    "    Status.firmsKsum = 0.0\n",
-    "    Status.firmsLsum = 0.0\n",
-    "    Status.firmsYsum = 0.0\n",
-    "    Status.firmsφsum = 0.0\n",
+    "    Status.firmsAsum = Decimal(\"0.0\")\n",
+    "    Status.firmsKsum = Decimal(\"0.0\")\n",
+    "    Status.firmsLsum = Decimal(\"0.0\")\n",
+    "    Status.firmsYsum = Decimal(\"0.0\")\n",
+    "    Status.firmsφsum = Decimal(\"0.0\")\n",
     "    for firm in Status.firms:\n",
     "        Status.firmsAsum += firm.A\n",
     "        Status.firmsKsum += firm.K\n",
@@ -300,9 +299,9 @@
     "\n",
     "\n",
     "def updateFirms():\n",
-    "    totalK = 0.0\n",
-    "    totalL = 0.0\n",
-    "    Status.firmsπsum = 0.0\n",
+    "    totalK = Decimal(\"0.0\")\n",
+    "    totalL = Decimal(\"0.0\")\n",
+    "    Status.firmsπsum = Decimal(\"0.0\")\n",
     "    for firm in Status.firms:\n",
     "        firm.L = firm.determineCredit()\n",
     "        totalL += firm.L\n",
@@ -341,7 +340,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "b5357757",
+   "id": "1ef561b6",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -355,6 +354,7 @@
     "        Statistics.getStatistics()\n",
     "        removeBankruptedFirms()\n",
     "        newFirmsNumber = determineNentry()\n",
+    "        Statistics.newFirms.append(newFirmsNumber)\n",
     "        addFirms(newFirmsNumber)\n",
     "        updateBankL()\n",
     "        updateFirms()\n",
@@ -362,6 +362,22 @@
     "\n",
     "        if doDebug and (doDebug == t or doDebug == -1):\n",
     "            set_trace()\n",
+    "\n",
+    "\n",
+    "def plot_newentry(show=True):\n",
+    "    Statistics.log(\"newentry\")\n",
+    "    plt.clf()\n",
+    "    xx = []\n",
+    "    yy = []\n",
+    "    for i in range(Config.T):\n",
+    "        xx.append(i)\n",
+    "        yy.append(Statistics.newFirms[i])\n",
+    "        addFirms(yy[-1])\n",
+    "    plt.plot(xx, yy, 'b-')\n",
+    "    plt.ylabel(\"New Entries\")\n",
+    "    plt.xlabel(\"t\")\n",
+    "    plt.title(\"New Entries\")\n",
+    "    plt.show() if show else plt.savefig(OUTPUT_DIRECTORY + \"/newentry.svg\")\n",
     "\n",
     "\n",
     "def plot_zipf_density(show=True):\n",
@@ -390,10 +406,8 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "e4794a71",
-   "metadata": {
-    "lines_to_next_cell": 1
-   },
+   "id": "b91f0732",
+   "metadata": {},
    "outputs": [],
    "source": [
     "def plot_zipf_density1(show=True):\n",
@@ -554,7 +568,7 @@
     "    plt.title(\"Zeta Values for All Firms over Time\")\n",
     "    plt.xlabel(\"Time\")\n",
     "    plt.ylabel(\"Zeta Value\")\n",
-    "    plt.show() if show else plt.savefig(\"zeta.svg\")\n",
+    "    plt.show() if show else plt.savefig(OUTPUT_DIRECTORY + \"/zeta.svg\")\n",
     "\n",
     "\n",
     "def plot_y(show):\n",
@@ -569,7 +583,7 @@
     "    plt.ylabel(\"ln Y\")\n",
     "    plt.xlabel(\"t\")\n",
     "    plt.title(\"Y\")\n",
-    "    plt.show() if show else plt.savefig(\"y.svg\")\n",
+    "    plt.show() if show else plt.savefig(OUTPUT_DIRECTORY + \"/y.svg\")\n",
     "\n",
     "\n",
     "def plot_phi(show=True):\n",
@@ -584,7 +598,22 @@
     "    plt.ylabel(\"Phi\")\n",
     "    plt.xlabel(\"t\")\n",
     "    plt.title(\"Phi\")\n",
-    "    plt.show() if show else plt.savefig(\"phi.svg\")\n",
+    "    plt.show() if show else plt.savefig(OUTPUT_DIRECTORY + \"/phi.svg\")\n",
+    "\n",
+    "\n",
+    "def plot_k(show):\n",
+    "    Statistics.log(\"k\")\n",
+    "    plt.clf()\n",
+    "    xx = []\n",
+    "    yy = []\n",
+    "    for i in range(Config.T):\n",
+    "        xx.append(i)\n",
+    "        yy.append( math.log( Statistics.firmsK[i]) )\n",
+    "    plt.plot(xx, yy, 'b-')\n",
+    "    plt.ylabel(\"ln K\")\n",
+    "    plt.xlabel(\"t\")\n",
+    "    plt.title(\"K\")\n",
+    "    plt.show() if show else plt.savefig(OUTPUT_DIRECTORY + \"/k.svg\")\n",
     "\n",
     "\n",
     "def plot_qq_firms_k(show):\n",
@@ -669,7 +698,7 @@
     "    plt.ylabel(\"Mu\")\n",
     "    plt.xlabel(\"t\")\n",
     "    plt.title(\"Mu\")\n",
-    "    plt.show() if show else plt.savefig(\"mu.svg\")\n",
+    "    plt.show() if show else plt.savefig(OUTPUT_DIRECTORY + \"/mu.svg\")\n",
     "\n",
     "\n",
     "def show_figures(show):\n",
@@ -683,19 +712,21 @@
     "    plot_baddebt(show)\n",
     "    plot_bankrupcies(show)\n",
     "    plot_interest_rate(show)\n",
-    "    plot_qq_firms_k(show)\n",
+    "    # plot_qq_firms_k(show)\n",
     "    plot_qq(show)\n",
     "    plot_distribution_kl(show)\n",
     "    plot_y(show)\n",
     "    plot_phi(show)\n",
     "    plot_zeta(show)\n",
-    "    plot_mu(show)"
+    "    plot_mu(show)\n",
+    "    plot_k(show)\n",
+    "    plot_newentry(show)"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "3cb62c81",
+   "id": "48e5d18b",
    "metadata": {
     "lines_to_next_cell": 2
    },
@@ -742,7 +773,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "d90e3394",
+   "id": "dd760963",
    "metadata": {
     "lines_to_next_cell": 2
    },
@@ -752,7 +783,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "0858532f",
+   "id": "a5745010",
    "metadata": {},
    "outputs": [],
    "source": [
