comprobamos que al calcular  el Bad Debt haya una firma con K-L > 0 sumada

--- a/002.fluctuations/fluctuations.ipynb
+++ b/002.fluctuations/fluctuations.ipynb
@@ -3,7 +3,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "b2844d0a",
+   "id": "ad5f7055",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -52,7 +52,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "645937b5",
+   "id": "7eada41e",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -216,10 +216,9 @@
     "    BankSector.B = 0.0\n",
     "    for firm in Status.firms[:]:\n",
     "        if (firm.π + firm.A) < 0:\n",
-    "            ##Statistics.log(\"quiebra %d %s %s\" % (firm.id,firm.π,firm.A))\n",
     "            # bankrupt: we sum Bn-1\n",
-    "            ##Statistics.log( \"    %s+%s<0 y  %s-%s=%s\" % (firm.π,firm.A,firm.L,firm.K,(firm.L-firm.K)))\n",
-    "            BankSector.B += (firm.L - firm.K)  # **********************************\n",
+    "            if firm.L - firm.K < 0:\n",
+    "                BankSector.B += (firm.L - firm.K)\n",
     "            Status.firms.remove(firm)\n",
     "            Status.numFailuresGlobal += 1\n",
     "            i += 1\n",
@@ -291,7 +290,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "d0207826",
+   "id": "86fc22e9",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -340,7 +339,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "c25c9c1e",
+   "id": "f98d53fc",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -583,7 +582,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "e8176244",
+   "id": "705cde1e",
    "metadata": {
     "lines_to_next_cell": 2
    },
@@ -630,7 +629,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "08a164fe",
+   "id": "794f76c8",
    "metadata": {
     "lines_to_next_cell": 2
    },
@@ -640,7 +639,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "6bc14ed0",
+   "id": "bc1db992",
    "metadata": {},
    "outputs": [],
    "source": [
