comprobamos que al calcular  el Bad Debt haya una firma con K-L > 0 sumada

--- a/003.fluctuations.green/fluctuations.green.old.ipynb
+++ b/003.fluctuations.green/fluctuations.green.old.ipynb
@@ -3,7 +3,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "a9e899a4",
+   "id": "941679e7",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -296,7 +296,7 @@
     "        firm.u = firm.determineU()\n",
     "\n",
     "        firm.π = firm.determineProfit()\n",
-    "        firm.determineφ()  # <-----------------------------\n",
+    "        firm.determineφ()\n",
     "        firm.A = firm.determineAssets()\n",
     "        Status.firmsπsum += firm.π\n",
     "    # update Kt-1 and At-1 (Status.firmsKsum && Status.firmsAsum):\n",
@@ -321,7 +321,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "c9de2ffa",
+   "id": "d912b008",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -376,7 +376,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "4c7b34bc",
+   "id": "5fbe89a5",
    "metadata": {
     "lines_to_next_cell": 2
    },
@@ -670,7 +670,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "d74e1484",
+   "id": "3384310a",
    "metadata": {
     "lines_to_next_cell": 2
    },
@@ -689,7 +689,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "bfb42137",
+   "id": "e1058446",
    "metadata": {},
    "outputs": [],
    "source": [
