--- a/003.fluctuations.green/fluctuations.green.ipynb
+++ b/003.fluctuations.green/fluctuations.green.ipynb
@@ -3,7 +3,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "11315bbf",
+   "id": "04fb320f",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -48,20 +48,20 @@
     "    # risk coefficient for bank sector (Basel)\n",
     "    v = Decimal(\"0.2\")\n",
     "\n",
-    "    delta1 = Decimal(\"0.001\")\n",
-    "    delta2 = Decimal(\"0.002\")\n",
+    "    delta1 = 0.001\n",
+    "    delta2 = 0.002\n",
     "\n",
-    "    coef_zeta = Decimal(\"0.04\")\n",
+    "    coef_zeta = Decimal(\"0.006\")\n",
     "    add_new_firms = True\n",
     "\n",
-    "    sigma = Decimal(\"0.01\")  # 0.02-0.05\n",
+    "    sigma = Decimal(\"0.5\")  # 0.02-0.05\n",
     "    beta = 2  # bernoulli"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "24859413",
+   "id": "62a14db4",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -213,11 +213,9 @@
     "\n",
     "    def determineφ(self):\n",
     "        if self.zeta > Config.coef_zeta:\n",
-    "            self.φ = self.φ * (1 + random.uniform(Config.delta1, Config.delta2))\n",
-    "            Status.cuenta_zeta += 1\n",
+    "            self.φ = self.φ * (1 + Decimal(str(random.uniform(Config.delta1, Config.delta2))))\n",
     "        else:\n",
     "            self.φ = self.φ\n",
-    "            Status.cuenta_nozeta += 1\n",
     "        return self.φ\n",
     "\n",
     "\n",
@@ -261,10 +259,8 @@
     "    BankSector.B = Decimal(\"0.0\")\n",
     "    for firm in Status.firms[:]:\n",
     "        if (firm.π + firm.A) < 0:\n",
-    "            ##Statistics.log(\"quiebra %d %s %s\" % (firm.id,firm.π,firm.A))\n",
-    "            # bankrupt: we sum Bn-1\n",
-    "            ##Statistics.log( \"    %s+%s<0 y  %s-%s=%s\" % (firm.π,firm.A,firm.L,firm.K,(firm.L-firm.K)))\n",
-    "            BankSector.B += (firm.L - firm.K)  # **********************************\n",
+    "            if firm.L - firm.K < 0:\n",
+    "                BankSector.B += (firm.L - firm.K)\n",
     "            Status.firms.remove(firm)\n",
     "            Status.numFailuresGlobal += 1\n",
     "            i += 1\n",
@@ -314,6 +310,7 @@
     "        firm.u = firm.determineU()\n",
     "\n",
     "        firm.π = firm.determineProfit()\n",
+    "        firm.determineφ()\n",
     "        firm.A = firm.determineAssets()\n",
     "        Status.firmsπsum += firm.π\n",
     "    # update Kt-1 and At-1 (Status.firmsKsum && Status.firmsAsum):\n",
@@ -340,7 +337,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "1ef561b6",
+   "id": "43344a53",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -406,7 +403,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "b91f0732",
+   "id": "8ea4ad9c",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -726,7 +723,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "48e5d18b",
+   "id": "e754f1d0",
    "metadata": {
     "lines_to_next_cell": 2
    },
@@ -773,7 +770,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "dd760963",
+   "id": "dd45f2e6",
    "metadata": {
     "lines_to_next_cell": 2
    },
@@ -783,7 +780,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "a5745010",
+   "id": "a9b1e475",
    "metadata": {},
    "outputs": [],
    "source": [
