--save to generate output in csv format

--- a/002.fluctuations/fluctuations.ipynb
+++ b/002.fluctuations/fluctuations.ipynb
@@ -3,17 +3,16 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "ad5f7055",
+   "id": "b2a663d4",
    "metadata": {},
    "outputs": [],
    "source": [
     "\n",
     "import argparse\n",
     "import math\n",
-    "import os\n",
+    "import os, sys\n",
     "import random\n",
     "from pdb import set_trace\n",
-    "import statsmodels.api as sm\n",
     "import pandas as pd\n",
     "import numpy as np\n",
     "from scipy import stats\n",
@@ -52,7 +51,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "7eada41e",
+   "id": "7319ac57",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -62,6 +61,8 @@
     "\n",
     "    def enableLog(logfile: str = None):\n",
     "        if logfile:\n",
+    "            if not os.path.exists(OUTPUT_DIRECTORY):\n",
+    "                os.mkdir(OUTPUT_DIRECTORY)\n",
     "            Statistics.logfile = open(OUTPUT_DIRECTORY + \"/\" + logfile, 'w', encoding=\"utf-8\")\n",
     "        Statistics.doLog = True\n",
     "\n",
@@ -81,7 +82,10 @@
     "    firmsL = []\n",
     "    firmsB = []\n",
     "    firmsNum = []\n",
+    "    firmsNEntry = []\n",
     "    rate = []\n",
+    "    bankL = []\n",
+    "    bankπ = []\n",
     "\n",
     "    @staticmethod\n",
     "    def getStatistics():\n",
@@ -97,6 +101,8 @@
     "        Statistics.firmsK.append(Status.firmsKsum)\n",
     "        Statistics.firmsπ.append(Status.firmsπsum)\n",
     "        Statistics.firmsL.append(Status.firmsLsum)\n",
+    "        Statistics.bankπ.append(BankSector.π)\n",
+    "        Statistics.bankL.append(BankSector.L)\n",
     "        Statistics.firmsB.append(BankSector.B)\n",
     "        Statistics.firmsNum.append(len(Status.firms))\n",
     "        Statistics.rate.append(BankSector.getAverageRate())\n",
@@ -230,6 +236,7 @@
     "def addFirms(Nentry):\n",
     "    for i in range(Nentry):\n",
     "        Status.firms.append(Firm())\n",
+    "        Statistics.firmsNEntry.append(Nentry)\n",
     "    Statistics.log(\"        - add %d new firms (Nentry)\" % Nentry)\n",
     "\n",
     "\n",
@@ -256,9 +263,7 @@
     "        firm.L = firm.determineCredit()\n",
     "        totalL += firm.L\n",
     "        firm.r = firm.determineInterestRate()\n",
-    "        kantes = firm.K\n",
     "        firm.K = firm.determineCapital()\n",
-    "        # Statistics.log(\"firm%d. K=%f > K=%f\" % (firm.id, kantes, firm.K))\n",
     "\n",
     "        totalK += firm.K\n",
     "        firm.u = firm.determineU()\n",
@@ -290,7 +295,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "86fc22e9",
+   "id": "14125d85",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -311,6 +316,7 @@
     "\n",
     "        if doDebug and (doDebug == t or doDebug == -1):\n",
     "            set_trace()\n",
+    "    Statistics.getStatistics()\n",
     "\n",
     "\n",
     "def plot_zipf_density(show=True):\n",
@@ -339,8 +345,10 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "f98d53fc",
-   "metadata": {},
+   "id": "3114e87f",
+   "metadata": {
+    "lines_to_next_cell": 1
+   },
    "outputs": [],
    "source": [
     "def plot_zipf_density1(show=True):\n",
@@ -494,6 +502,7 @@
     "\n",
     "\n",
     "def plot_qq_firms_k(show):\n",
+    "    import statsmodels.api as sm\n",
     "    plt.clf()\n",
     "    fig, ax = plt.subplots(nrows=1, ncols=1, figsize=(6, 4))\n",
     "    sm.qqplot(\n",
@@ -518,6 +527,7 @@
     "\n",
     "\n",
     "def plot_qq(show):\n",
+    "    import statsmodels.api as sm\n",
     "    plt.clf()\n",
     "    fig, axs = plt.subplots(nrows=1, ncols=2, figsize=(10, 4))\n",
     "    sm.qqplot(\n",
@@ -574,15 +584,55 @@
     "    plot_baddebt(show)\n",
     "    plot_bankrupcies(show)\n",
     "    plot_interest_rate(show)\n",
-    "    plot_qq_firms_k(show)\n",
-    "    plot_qq(show)\n",
-    "    plot_distribution_kl(show)"
+    "    plot_distribution_kl(show)\n",
+    "\n",
+    "\n",
+    "def _config_description_():\n",
+    "    description = sys.argv[0]\n",
+    "    for attr in dir(Config):\n",
+    "        value = getattr(Config, attr)\n",
+    "        if isinstance(value, int) or isinstance(value, float):\n",
+    "            description += f\" {attr}={value}  \"\n",
+    "    return description\n",
+    "\n",
+    "def save_results(filename):\n",
+    "    filename = os.path.basename(filename).rsplit('.', 1)[0]\n",
+    "    with open(f\"{OUTPUT_DIRECTORY}\\\\{filename}.inp\", 'w', encoding=\"utf-8\") as script:\n",
+    "        script.write(f\"open {filename}.csv\\n\")\n",
+    "        script.write(\"setobs 1 1 --special-time-series\\n\")\n",
+    "        script.write(f\"gnuplot firmsK --time-series --with-lines --output=display\\n\")\n",
+    "    with open(f\"{OUTPUT_DIRECTORY}\\\\{filename}.csv\", 'w', encoding=\"utf-8\") as results:\n",
+    "        results.write(f\"# {_config_description_()}\\n\")\n",
+    "        results.write(f\"  t{'firmsNum':>15}\")\n",
+    "        results.write(f\"{'firmsNEntry':>15}\")\n",
+    "        results.write(f\"{'bankruptcy':>15}\")\n",
+    "        results.write(f\"{'firmsK':>15}\")\n",
+    "        results.write(f\"{'firmsL':>15}\")\n",
+    "        results.write(f\"{'firmsB':>15}\")\n",
+    "        results.write(f\"{'firmsπ':>15}\")\n",
+    "        results.write(f\"{'rate':>10}\")\n",
+    "        results.write(f\"{'bankL':>15}\")\n",
+    "        results.write(f\"{'bankπ':>15}\")\n",
+    "        results.write(f\"\\n\")\n",
+    "        for i in range(Config.T):\n",
+    "            line = f\"{i:>3}\"\n",
+    "            line += f\"{Statistics.firmsNum[i]:15.2f}\"\n",
+    "            line += f\"{Statistics.firmsNEntry[i]:15.2f}\"\n",
+    "            line += f\"{Statistics.bankruptcy[i]:15.2f}\"\n",
+    "            line += f\"{Statistics.firmsK[i]:15.2f}\"\n",
+    "            line += f\"{Statistics.firmsL[i]:15.2f}\"\n",
+    "            line += f\"{Statistics.firmsB[i]:15.2f}\"\n",
+    "            line += f\"{Statistics.firmsπ[i]:15.2f}\"\n",
+    "            line += f\"{Statistics.rate[i]:10.4f}\"\n",
+    "            line += f\"{Statistics.bankL[i]:15.2f}\"\n",
+    "            line += f\"{Statistics.bankπ[i]:15.2f}\"\n",
+    "            results.write(f\"{line}\\n\")"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "705cde1e",
+   "id": "a3519092",
    "metadata": {
     "lines_to_next_cell": 2
    },
@@ -592,28 +642,52 @@
     "def doInteractive():\n",
     "    parser = argparse.ArgumentParser(description=\"Fluctuations firms/banks\")\n",
     "    parser.add_argument(\"--plot\", action=\"store_true\", help=\"Shows the plots\")\n",
-    "    parser.add_argument(\"--sizeparam\", type=int, help=\"Size parameter (default=%s)\" % Config.Ñ)\n",
-    "    parser.add_argument(\"--saveplot\", action=\"store_true\", help=\"Save the plots in dir '\" + OUTPUT_DIRECTORY+\"'\")\n",
-    "    parser.add_argument(\"--log\", action=\"store_true\", help=\"Log (stdout default)\")\n",
-    "    parser.add_argument(\"--logfile\", type=str, help=\"Log to file in directory '\" + OUTPUT_DIRECTORY+\"'\")\n",
-    "    parser.add_argument(\"--debug\", help=\"Do a debug session at t=X, default each t\", type=int, const=-1, nargs='?')\n",
+    "    parser.add_argument(\"--sizeparam\", type=int, default=Config.Ñ,\n",
+    "                        help=\"Size parameter (default=%s)\" % Config.Ñ)\n",
+    "    parser.add_argument(\"--saveplot\", action=\"store_true\", \n",
+    "                        help=\"Save the plots in dir '\" + OUTPUT_DIRECTORY+\"'\")\n",
+    "    parser.add_argument(\"--save\", type=str,\n",
+    "                        help=\"Save the data in csv/inp in '\" + OUTPUT_DIRECTORY+\"'\")\n",
+    "    parser.add_argument(\"--log\", action=\"store_true\", \n",
+    "                        help=\"Log (stdout default)\")\n",
+    "    parser.add_argument(\"--t\", type=int, default=None,help=\"Number of steps\")\n",
+    "    parser.add_argument(\"--n\", type=int, default=None,help=\"Number of firms\")\n",
+    "    parser.add_argument(\"--logfile\", type=str,\n",
+    "                        help=\"Log to file in directory '\" + \n",
+    "                        OUTPUT_DIRECTORY+\"'\")\n",
+    "    parser.add_argument(\"--debug\", \n",
+    "                        help=\"Do a debug session at t=X, default each t\",\n",
+    "                        type=int, const=-1, nargs='?')\n",
     "    args = parser.parse_args()\n",
     "\n",
     "    if args.sizeparam:\n",
     "        Config.Ñ = int(args.sizeparam)\n",
     "        if Config.Ñ < 0 or Config.Ñ > Config.N:\n",
     "            print(\"value not valid for Ñ: must be 0..%s\" % Config.N)\n",
-    "\n",
+    "            sys.exit(-1)\n",
+    "    if args.n:\n",
+    "        Config.N = args.n\n",
+    "        if Config.N < 0:\n",
+    "            print(\"value not valid for N: must be >0\")\n",
+    "            sys.exit(-1)\n",
+    "    if args.t:\n",
+    "        Config.T = args.t\n",
+    "        if Config.T < 0:\n",
+    "            print(\"value not valid for T: must be >0\")\n",
+    "            sys.exit(-1)\n",
+    "                \n",
     "    if args.log or args.logfile:\n",
     "        Statistics.enableLog(args.logfile)\n",
     "\n",
     "    doSimulation(args.debug)\n",
     "    if Status.numFailuresGlobal > 0:\n",
-    "        Statistics.log(\"[total failures in all times = %s \" % Status.numFailuresGlobal)\n",
+    "        Statistics.log(\"[total failures in all times = %s]\" % Status.numFailuresGlobal)\n",
     "    else:\n",
     "        Statistics.log(\"[no failures]\")\n",
     "    if args.plot:\n",
     "        show_figures(True)\n",
+    "    if args.save:\n",
+    "        save_results(args.save)\n",
     "    if args.saveplot:\n",
     "        show_figures(False)\n",
     "\n",
@@ -629,7 +703,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "794f76c8",
+   "id": "75b9c879",
    "metadata": {
     "lines_to_next_cell": 2
    },
@@ -639,7 +713,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "bc1db992",
+   "id": "881a0c6f",
    "metadata": {},
    "outputs": [],
    "source": [
